...
  EmojiAnimeEntry('👑❤️🧠', 'Kaguya-sama: Love Is War'),
  EmojiAnimeEntry('🐯🐉❤️', 'Toradora!'),
  EmojiAnimeEntry('🍡🌸😭', 'Clannad'),
  EmojiAnimeEntry('👼🎸🔫', 'Angel Beats!'),
  EmojiAnimeEntry('5️⃣👯💍', 'The Quintessential Quintuplets'),
  EmojiAnimeEntry('🗡️🆙🕶️', 'Solo Leveling'),
  EmojiAnimeEntry('🧝⏳🪄', 'Frieren: Beyond Journey\'s End'),
  EmojiAnimeEntry('⭐👶🎤', 'Oshi no Ko'),
  EmojiAnimeEntry('🎸😰🎀', 'Bocchi the Rock!'),
];

